...
                            )
                        }
                    }
                } else {
                    LazyVerticalGrid(
                        columns = GridCells.Fixed(2),
                        modifier = Modifier.fillMaxSize().testTag("pet_grid_lazy_vertical_grid"),
                        contentPadding = PaddingValues(8.dp),
                        verticalArrangement = Arrangement.spacedBy(8.dp),
                        horizontalArrangement = Arrangement.spacedBy(8.dp),
                        state = rememberLazyGridState()
                    ) {
                        items(items = pets, key = { it.id }) { pet ->
...
            }

            AddNewPetButton(
                modifier = Modifier
                    .align(Alignment.BottomEnd)
                    .padding(bottom = 32.dp, end = 16.dp)
                    .testTag("add_pet_button"),
                onClick = addNewPetClicked
            )
        }
    }
}

...
