...
        isTrained = true,
        imageResId = R.drawable.dog2,
        summary = "Golden Retrievers are friendly, intelligent dogs often used as family pets, guide dogs, and rescue animals."
    ),
    Dog(
        id = 7,
        name = "Buddy",
        age = 2,
        weight = 24.0,
        breed = "Dalmatian",
        isTrained = false,
        imageResId = R.drawable.dog3,
        summary = "Dalmatians are energetic dogs famous for their unique black-spotted coat and strong endurance."
...
